--- a/ingredients.css
+++ b/ingredients.css
@@ -1,65 +1,70 @@
 @charset "UTF-8";
-/* CSS Document */
 
 .bun-top {
-  height: 70px;
-  width: 60%;
-  background: #e5b05a;
-  border-radius: 100px 100px 20px 20px;
-  border-bottom: solid 10px rgba(0,0,0,.1);
+  height: 75px;
+  width: 65%;
+  background: #f2b75a;
+  border-radius: 100px 100px 25px 25px;
+  border-bottom: solid 10px rgba(0, 0, 0, 0.1);
+}
+.bun-bottom {
+  height: 40px;
+  width: 65%;
+  background: #f2b75a;
+  border-radius: 20px 20px 45px 45px;
+  border-top: solid 8px rgba(0, 0, 0, 0.1);
 }
 
 .cheese {
-  height: 15px;
-  width: 65%;
-  background: #f2c120;
-  border-bottom: solid 2px rgba(0,0,0,.1);
+  height: 18px;
+  width: 68%;
+  background: #f6d225;
+  border-bottom: solid 2px rgba(0, 0, 0, 0.1);
 }
 
 .tomato {
-  height: 25px;
-  width: 50%;
-  background-color: #dd3710;
-  border-bottom: solid 2px rgba(0,0,0,.1);
-}
-
-.meatball {
-  height: 60px;
-  width: 70px;
-  background: #74380d;
-  border-radius: 50px;
-  display: inline-block;
-  vertical-align: top;
+  height: 28px;
+  width: 52%;
+  background-color: #dd3812;
+  border-bottom: solid 2px rgba(0, 0, 0, 0.1);
 }
 
 .patty {
-  height: 35px;
-  width: 65%;
-  background: #ad370b;
+  height: 40px;
+  width: 70%;
+  background: #7b2f0d;
   border-radius: 15px;
-  border-bottom: solid 2px rgba(0,0,0,.1);
+  border-bottom: solid 2px rgba(0, 0, 0, 0.1);
+}
+
+.veggie-patty {
+  height: 35px;
+  width: 68%;
+  background: #4e9a44;
+  border-radius: 15px;
+  border-bottom: solid 2px rgba(0, 0, 0, 0.1);
 }
 
 .pickle {
-  height: 30px;
+  height: 25px;
   width: 50%;
-  background: #3ac67d;
+  background: #3fc67f;
   border-radius: 0 0 100px 100px;
-  border-bottom: solid 10px #2d9961;
+  border-bottom: solid 6px #2d9961;
 }
 
 .onion {
-  width: 40%;
-  background-color: #a039bf;
-  border-top: dotted 20px rgba(255,255,255,.2);
+  height: 20px;
+  width: 42%;
+  background-color: #b54dc1;
+  border-top: dotted 15px rgba(255, 255, 255, 0.2);
 }
 
-.bun-bottom {
-  height: 35px;
-  width: 60%;
-  background: #e5b05a;
-  border-radius: 20px 20px 40px 40px;
-  border-top: solid 8px rgba(0,0,0,.1)
+.lettuce {
+  height: 15px;
+  width: 70%;
+  background-color: #59b84c;
+  border-radius: 10px;
 }
 
 .plate {
