--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 @charset "UTF-8";
-/* CSS Document */
-
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -13,13 +11,10 @@ h1 {
   font-size: 30px;
   text-align: center;
   margin: 0;
-  padding: 5px 0;
+  padding: 10px;
   background: #ea260d;
   text-shadow: 0px 2px 0 rgba(0,0,0,.2);
-  line-height: 100%;
   color: white;
-  padding: 10px;
-  margin: 0 auto;
   display: inline-block;
 }
 
@@ -30,13 +25,11 @@ h2 {
   margin: 10px 0 30px 0;
 }
 
-/* Set the maximum width of your burger */
 .burger {
   max-width: 500px;
-  margin: 0 auto;
+  margin: 0 auto 50px auto;
 }
 
-/* This center-aligns all of the ingredients */
 .burger > div {
   margin: 0 auto;
 }
