--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
   margin: 0;
   padding: 10px;
   background: #ea260d;
-  text-shadow: 0px 2px 0 rgba(0,0,0,.2);
+  text-shadow:2px 0 rgba(0,0,0,.2);
   color: white;
   display: inline-block;
 }
